<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:layout_editor_absoluteY="25dp">

    <Button
        android:id="@+id/helpBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:fontFamily="casual"
        android:text="@string/pomoc"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/achieveBtn"
        app:layout_constraintTop_toBottomOf="@+id/achieveBtn" />

    <Button
        android:id="@+id/statsBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:fontFamily="casual"
        android:text="@string/statsButtonName"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/trainingBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TVMenuLabel" />

    <Button
        android:id="@+id/trainingBtn"
        android:layout_width="0dp"
        android:layout_height="62dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:fontFamily="casual"
        android:text="@string/trainingButtonName"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/statsBtn"
        app:layout_constraintTop_toBottomOf="@+id/statsBtn" />

    <Button
        android:id="@+id/achieveBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:fontFamily="casual"
        android:text="@string/achievementsButtonName"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/trainingBtn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/trainingBtn"
        app:layout_constraintTop_toBottomOf="@+id/trainingBtn"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/TVMenuLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:text="@string/menu_g_wne"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/logOutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:fontFamily="casual"
        android:text="@string/wyloguj"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>