<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/helpLabelTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="casual"
        android:text="@string/instrukcje"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/WillPowerHelpBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:fontFamily="casual"
        android:text="@string/trening_si_y_woli"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/StaminaHelpBtn"
        app:layout_constraintStart_toStartOf="@+id/StaminaHelpBtn"
        app:layout_constraintTop_toBottomOf="@+id/StaminaHelpBtn" />

    <Button
        android:id="@+id/StrengthHelpBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:fontFamily="casual"
        android:text="@string/trening_si_y"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helpLabelTV" />

    <Button
        android:id="@+id/StaminaHelpBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:drawable/screen_background_light_transparent"
        android:fontFamily="casual"
        android:text="@string/trening_kondycji"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/StrengthHelpBtn"
        app:layout_constraintStart_toStartOf="@+id/StrengthHelpBtn"
        app:layout_constraintTop_toBottomOf="@+id/StrengthHelpBtn" />
</android.support.constraint.ConstraintLayout>